--- a/index.html
+++ b/index.html
@@ -77,23 +77,94 @@
         <div class="skill">
             <img src="images/icons/js.png" alt="">
             <h3 class="skill-title">Vamilla Javascript</h3>
-            <p class="skill-descriptiom">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
             <img src="images/icons/react.png" alt="">
             <h3 class="skill-title">React</h3>
-            <p class="skill-descriptiom">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
             <img src="images/icons/nodejs.png" alt="">
             <h3 class="skill-title">Nodejs</h3>
-            <p class="skill-descriptiom">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
             <img src="images/icons/mongo.png" alt="">
             <h3 class="skill-title">MongoDB</h3>
-            <p class="skill-descriptiom">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
+    </div>
+</section>
+<!-- resume section -->
+<section>
+    <h3 class="section-title"> A Summary Of My Resume</h3>
+
+    <div class="resume-container">
+<!-- .resume-colum*3>h3.resume-colum-title -->
+<div class="resume-colum">
+    <h3 class="resume-colum-title">My Education</h3>
+
+    <div class="resume-item">
+        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+    <h3 class="resume-colum-institute">Harvard University / 2015 - 2017</h3>
+    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+</div>
+<hr>
+    <div class="resume-item">
+        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+    <h3 class="resume-colum-institute">Harvard University / 2015 - 2017</h3>
+    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+</div>
+    <div class="resume-item">
+        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+    <h3 class="resume-colum-institute">Harvard University / 2015 - 201</h3>
+    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+
+</div>
+<hr>
+
+    <div class="resume-item">
+        <h2 class="resume-item-title"></h2>
+    </div>
+</div>
+<div class="resume-colum">
+    <h3 class="resume-colum-title">My Experience</h3>
+</div>
+<hr>
+<div class="resume-colum">
+    <h3 class="resume-colum-title"></h3>
+    <div class="resume-item">
+        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+    <h3 class="resume-colum-institute">Apple Inc / 2020 - Current</h3>
+    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+</div>
+<hr>
+    <div class="resume-item">
+        <h2 class="resume-item-title">Jr. Font End Developer</h2>
+    <h3 class="resume-colum-institute">Dribbble Inc / 2018 - 2022</h3>
+    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+</div>
+    <div class="resume-item">
+        <h2 class="resume-item-title">HTML Developer</h2>
+    <h3 class="resume-colum-institute">Adobe Inc / 2017 - 2018</h3>
+    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+
+</div>
+<hr>
+</div>
+    </div>
+  
     </div>
 </section>
 
