--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- .skill*4>img+h3.skill-title+p.skill-description -->
         <div class="skill">
             <img src="images/icons/js.png" alt="">
-            <h3 class="skill-title">Vamilla Javascript</h3>
+            <h3 class="skill-title">Vanilla Javascript</h3>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
@@ -110,9 +110,9 @@
     <h3 class="resume-colum-institute">Harvard University / 2015 - 2017</h3>
     <p class="resume-item-description">List skill/technologies here. You can change the icon above 
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-
+        <hr>
 </div>
-<hr>
+
     <div class="resume-item">
         <h2 class="resume-item-title">Master in Computer Engineering</h2>
     <h3 class="resume-colum-institute">Harvard University / 2015 - 2017</h3>
@@ -120,6 +120,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 
 </div>
+<hr>
     <div class="resume-item">
         <h2 class="resume-item-title">Master in Computer Engineering</h2>
     <h3 class="resume-colum-institute">Harvard University / 2015 - 201</h3>
@@ -129,14 +130,15 @@
 </div>
 <hr>
 
+
     <div class="resume-item">
         <h2 class="resume-item-title"></h2>
     </div>
 </div>
 <div class="resume-colum">
     <h3 class="resume-colum-title">My Experience</h3>
-</div>
-<hr>
+
+
 <div class="resume-colum">
     <h3 class="resume-colum-title"></h3>
     <div class="resume-item">
@@ -146,6 +148,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 
 </div>
+
 <hr>
     <div class="resume-item">
         <h2 class="resume-item-title">Jr. Font End Developer</h2>
@@ -154,6 +157,7 @@
         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 
 </div>
+<hr>
     <div class="resume-item">
         <h2 class="resume-item-title">HTML Developer</h2>
     <h3 class="resume-colum-institute">Adobe Inc / 2017 - 2018</h3>
@@ -165,6 +169,9 @@
 </div>
     </div>
   
+    </div>
+    <div class="download-cv">
+        <button class="btn-primary" >Download CV</button>
     </div>
 </section>
 
